--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    /> -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
+
     <meta
       name="description"
       content="Wepora is a best Graphics, software and Web Development company  and provides all IT solutions to their client. In india.."
@@ -286,30 +288,21 @@
         </div>
       </div>
     </section>
-    <section
-      id="about-page"
-      class="container-fluid position-absolute"
-    ></section>
-    <section
-      id="service-page"
-      class="container-fluid position-absolute"
-    ></section>
-    <section
-      id="skills-page"
-      class="container-fluid position-absolute"
-    ></section>
-    <section
-      id="assignment-page"
-      class="container-fluid position-absolute"
-    ></section>
-    <section
-      id="contact-page"
-      class="container-fluid position-absolute"
-    ></section>
-    <section
-      id="service-page"
-      class="container-fluid position-absolute"
-    ></section>
+    <section id="about-page" class="container-fluid position-absolute">
+      <h2 id="about-title">About</h2>
+    </section>
+    <section id="service-page" class="container-fluid position-absolute">
+      <h2 id="service-title">Service</h2>
+    </section>
+    <section id="skills-page" class="container-fluid position-absolute">
+      <h2 id="skills-title">Skills</h2>
+    </section>
+    <section id="assignment-page" class="container-fluid position-absolute">
+      <h2 id="assignment-title">Assignments</h2>
+    </section>
+    <section id="contact-page" class="container-fluid position-absolute">
+      <h2 id="contact-title">Contact</h2>
+    </section>
     <!--content end-->
     <!-- JavaScript -->
     <script
