--- a/index.html
+++ b/index.html
@@ -289,19 +289,84 @@
       </div>
     </section>
     <section id="about-page" class="container-fluid position-absolute">
-      <h2 id="about-title">About</h2>
+      <h2 id="about-title" class="fixed-top">About</h2>
+      <div id="about_info_main" class="container-fluid position-relative">
+        <div class="row h-100">
+          <div
+            id="about-info-first-col"
+            class="col-sm-7 d-flex flex-column justify-content-between align-items-center"
+          >
+            <div></div>
+            <div>
+              <h2>W.G.Sonal Sithara</h2>
+              <p>
+                I am a software engineering student in IJSE (Institute of Java
+                Software Engineering) and currently completing second semester.
+                <br />
+                <span></span>
+                <br />
+                I love building things. While hard engineering problems are
+                often instrinsically fun to takle, I'm most attracted to solving
+                real customer problems with a business justification.
+              </p>
+              <div>
+                <h5>INTERESTED IN...</h5>
+                <div>
+                  <i class="fa fa-code"><h6>Coding</h6></i>
+                  <i class="fa fa-music"><h6>Music</h6></i>
+                  <i class="fa fa-camera-retro"><h6>Photography</h6></i>
+                  <i class="fa fa-plane"><h6>Traveling</h6></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            id="about-info-second-col"
+            class="col-sm-5 d-flex justify-content-center align-items-center"
+          >
+            <div>
+              <i class="fa fa-calendar"><h5>12 November, 2000</h5></i>
+              <i class="fa fa-phone"><h5>(+94) 768563881</h5></i>
+              <i class="fa fa-envelope"><h5>sonalsithara2352@gmail.com</h5></i>
+              <i class="fa fa-location-arrow"
+                ><h5>mahawaththa,meegahagoda,ahangama</h5></i
+              >
+              <div>
+                <a
+                  href="https://web.facebook.com/profile.php?id=100016986437731"
+                  target="_blank"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://github.com/Sonal23520" target="_blank"
+                  ><i class="fa fa-github"></i
+                ></a>
+                <a
+                  href="https://stackoverflow.com/users/15041888/sonal-sithara"
+                  target="_blank"
+                  ><i class="fa fa-stack-overflow"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/sonal-sithara-6603911ba/"
+                  target="_blank"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="service-page" class="container-fluid position-absolute">
-      <h2 id="service-title">Service</h2>
+      <h2 id="service-title" class="fixed-top">Service</h2>
     </section>
     <section id="skills-page" class="container-fluid position-absolute">
-      <h2 id="skills-title">Skills</h2>
+      <h2 id="skills-title" class="fixed-top">Skills</h2>
     </section>
     <section id="assignment-page" class="container-fluid position-absolute">
-      <h2 id="assignment-title">Assignments</h2>
+      <h2 id="assignment-title" class="fixed-top">Assignments</h2>
     </section>
     <section id="contact-page" class="container-fluid position-absolute">
-      <h2 id="contact-title">Contact</h2>
+      <h2 id="contact-title" class="fixed-top">Contact</h2>
     </section>
     <!--content end-->
     <!-- JavaScript -->
